--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "test:problem1": "jest app/mytest.test.tsx --no-cache"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.10",
     "identity-obj-proxy": "^3.0.0",
     "next": "latest",
+    "next-i18next": "^15.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^15.1.1",
@@ -26,7 +28,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "babel-jest": "^29.7.0",
-    "babel-plugin-transform-barrels": "^1.0.20",
+    "babel-plugin-transform-barrels": "^1.0.21",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "typescript": "5.3.3"
